--- a/src/app/clinical-services/treatment-indications/components/treatment-indications-form/treatment-indications-form.component.html
+++ b/src/app/clinical-services/treatment-indications/components/treatment-indications-form/treatment-indications-form.component.html
@@ -3,37 +3,46 @@
     </h4>
     <mat-divider class="my-4"></mat-divider>
     <form *ngIf="treatmentIndicationsForm" [formGroup]="treatmentIndicationsForm">
+        <div class="row mb-1">
+            <div class="form-group col-md-6">
+                <mat-form-field class="w-100" appearance="outline">
+                    <mat-label>Descripcion:</mat-label>
+                    <input matInput formControlName="descripcion" />
+                </mat-form-field>
+            </div>
+            <div class="form-group col-md-6">
+                <mat-form-field class="w-100" appearance="outline">
+                    <mat-label>Fecha</mat-label>
+                    <input matInput formControlName="fecha" [matDatepicker]="picker" />
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+            </div>
+        </div>
+        <div class="row mb-1">
+            <div class="form-group col-md-6">
+                <mat-form-field appearance="fill">
+                    <mat-label i18n="Timepicker 1 Title">Hora</mat-label>
+                    <input matTimepicker #t1="matTimepicker" i18n-okLabel="Timepicker 1 Ok Label" okLabel="Ok"
+                        i18n-cancelLabel="Timepicker 1 Cancel Label" cancelLabel="Cancel" id="timepicker-example-1"
+                        mode="24h" formControlName="hora" placeholder="Please select time..." name="time-1" required>
+                    <mat-icon matSuffix (click)="t1.showDialog()">access_time</mat-icon>
+                    <mat-error *ngIf="timeControl.errors?.required"> {{ 'La hora es' }} <strong>requerido</strong>
+                    </mat-error>
+                    <!--<mat-error *ngIf="time1.touched && time1.invalid">Invalid Date</mat-error>-->
+                </mat-form-field>
+            </div>
 
-        <mat-form-field class="w-100" appearance="outline">
-            <mat-label>Descripcion:</mat-label>
-            <input matInput formControlName="descripcion" />
-        </mat-form-field>
+            <div class="form-group col-md-6">
 
-        <mat-form-field class="w-100" appearance="outline">
-            <mat-label>Fecha</mat-label>
-            <input matInput formControlName="fecha" [matDatepicker]="picker" />
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
+                <ng-select appearance="outline" class="custom w-100" placeholder="Sección Clínica"
+                    [items]="clinicalSection" bindLabel="cita.id" bindValue="id" formControlName="sesion_clinica">
+                </ng-select>
+                <small class="text-danger error-style"
+                    *ngIf="sesion_clinicaControl.errors?.required && sesion_clinicaControl.dirty">
+                    El campo Sección Clínica es <strong>requerido</strong></small>
 
-        <mat-form-field appearance="fill">
-            <mat-label i18n="Timepicker 1 Title">Hora</mat-label>
-            <input matTimepicker #t1="matTimepicker" i18n-okLabel="Timepicker 1 Ok Label" okLabel="Ok"
-                i18n-cancelLabel="Timepicker 1 Cancel Label" cancelLabel="Cancel" id="timepicker-example-1" mode="24h"
-                formControlName="hora" placeholder="Please select time..." name="time-1" required>
-            <mat-icon matSuffix (click)="t1.showDialog()">access_time</mat-icon>
-            <mat-error *ngIf="timeControl.errors?.required"> {{ 'La hora es' }} <strong>requerido</strong> </mat-error>
-            <!--<mat-error *ngIf="time1.touched && time1.invalid">Invalid Date</mat-error>-->
-        </mat-form-field>
-
-        <mat-divider class="my-4"></mat-divider>
-        <div class="mb-4">
-            <ng-select appearance="outline" class="custom w-100" placeholder="Sección Clínica" [items]="clinicalSection"
-                bindLabel="cita.id" bindValue="id" formControlName="sesion_clinica">
-            </ng-select>
-            <small class="text-danger error-style"
-                *ngIf="sesion_clinicaControl.errors?.required && sesion_clinicaControl.dirty">
-                El campo Sección Clínica es <strong>requerido</strong></small>
+            </div>
         </div>
 
     </form>
