--- a/src/app/clinical-services/pinpaciente/pages/pinpaciente-page/pinpaciente-page.component.html
+++ b/src/app/clinical-services/pinpaciente/pages/pinpaciente-page/pinpaciente-page.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
-    <h4>Pin Registro</h4>
-    <button (click)="createPatient()" mat-raised-button color="primary" class="button">Crear Pin registro</button>
+    <h4>Pin Paciente</h4>
+    <button (click)="createPatient()" mat-raised-button color="primary" class="button">Crear Pin Paciente</button>
   </div>
   <app-custom-table
     *ngIf="pinpaciente"
