Editar registro desde tablas dinamicas

--- a/src/app/clinical-services/pages/clinic-history-item/clinic-history-item.component.html
+++ b/src/app/clinical-services/pages/clinic-history-item/clinic-history-item.component.html
@@ -1,1 +1,1 @@
-<app-clinic-history-form [metaTableNames]="metaTableNames" (create)="onCreate($event)"></app-clinic-history-form>
+<app-clinic-history-form *ngIf="metaTableNames" [metaTableNames]="metaTableNames" (create)="onCreate($event)" (edit)="onEdit($event)"></app-clinic-history-form>
