--- a/src/app/clinical-services/components/clinic-history-form/clinic-history-form.component.html
+++ b/src/app/clinical-services/components/clinic-history-form/clinic-history-form.component.html
@@ -1,5 +1,5 @@
 <div class="container my-5">
-  <h4>{{ clinicHistory ? 'Editar Historia Clínica' : 'Crear Historia Clínica' }}</h4>
+  <h4>{{ tableNameId ? 'Editar Historia Clínica' : 'Crear Historia Clínica' }}</h4>
   <mat-divider class="my-4"></mat-divider>
   <div *ngIf="metaTableNames" class="d-flex flex-column justify-content-center align-items-center flex-wrap">
     <mat-form-field class="w-100 mw-400" appearance="outline">
@@ -30,7 +30,7 @@
 
   <div class="d-flex align-items-center justify-content-end">
     <button (click)="onSubmit()" [disabled]="!metaFieldsForms || !validForms()" mat-raised-button color="primary" class="button">
-      {{ clinicHistory ? 'Aceptar' : 'Crear' }}
+      {{ tableNameId ? 'Aceptar' : 'Crear' }}
     </button>
   </div>
 </div>
