--- a/src/app/clinical-services/clinic-history-static/clinic-history-static-page/clinic-history-static-pin/clinic-history-static-pin/clinic-history-static-pin.component.html
+++ b/src/app/clinical-services/clinic-history-static/clinic-history-static-page/clinic-history-static-pin/clinic-history-static-pin/clinic-history-static-pin.component.html
@@ -1,26 +1,21 @@
 <div class="form">
-    <h4>Insertar Pin</h4>
-    <mat-divider class="my-4"></mat-divider>
-    <p class="my-1" *ngIf="data.dataclinicHistoryStaticPin?.paciente">
-        Paciente: <b>{{ data.dataclinicHistoryStaticPin.paciente}}</b>
-    </p>
-    <p class="my-1" *ngIf="data.dataclinicHistoryStaticPin?.numero_hc">
-        Nº Historia Clínica: <b>{{ data.dataclinicHistoryStaticPin.numero_hc }}</b>
-    </p>
 
-    <mat-divider class="my-4"></mat-divider>
+
+    <h4 class="my-1" *ngIf="data.dataclinicHistoryStaticPin?.paciente">
+        Inserte el Pin del Paciente: <b>{{ data.dataclinicHistoryStaticPin.paciente}}</b>
+    </h4>
+
     <form *ngIf="clinicHistoryStaticPin" [formGroup]="clinicHistoryStaticPin">
         <mat-form-field class="w-100" appearance="outline">
             <mat-label>Pin:</mat-label>
-            <input matInput formControlName="paciente_pin" type="password" />
-            <!--    <mat-error *ngIf="this.paciente_pinControl.errors?.required"> {{ 'El pin es:' }}
-                <strong>requerido</strong>
-            </mat-error> -->
+            <input matInput formControlName="paciente_pin" type="password" maxlength="4" />
+            <mat-error *ngIf="this.paciente_pinControl.errors?.required"> {{ 'El pin es:' }}
+                <strong>incorrecto</strong>
+            </mat-error>
         </mat-form-field>
     </form>
-    <mat-divider class="my-4"></mat-divider>
-    <div class="d-flex align-items-center justify-content-end">
-        <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
+   
+    <div class="d-flex align-items-center justify-content-center">
         <button (click)="onSubmit(clinicHistoryStaticPin.value)" [disabled]="!clinicHistoryStaticPin.valid"
             mat-raised-button color="primary" class="button">
             Aceptar
