--- a/src/app/patient/pages/patient-page/patient-page.component.html
+++ b/src/app/patient/pages/patient-page/patient-page.component.html
@@ -1,6 +1,7 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
     <h4>Pacientes</h4>
+    <button (click)="makePdf()" mat-raised-button color="primary" class="button">Crear PDF</button>
     <button (click)="goToForm()" mat-raised-button color="primary" class="button">Crear Paciente</button>
   </div>
   <app-custom-table
